[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "requests>=2.32.3",
    "yt-dlp>=2025.5.22",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
]
